2006-09-28  Matthew Allum  <mallum@openedhand.com>

	* psplash.c: (psplash_draw_progress), (main):
	img positioning tweaks.

2006-09-28  Matthew Allum  <mallum@openedhand.com>

	* Makefile.am:
	* make-image-header.sh:
	* psplash-bar-img.h:
	* psplash-hand-img.h:
	* psplash.c: (psplash_draw_msg), (psplash_draw_progress), (main):
	Add new hopefully nicer untested images.
	
	* psplash-image.h:
	Remove

2006-09-08  Matthew Allum  <mallum@openedhand.com>

	* Makefile.am:
	* radeon-font.h:
	Add 'compiled' font.

	* psplash-fb.c:
	* psplash-fb.h:
	* psplash.c:
	* psplash.h:
	Add basic font/text rendering support 
	Add remote msg suuport (psplash-write 'MSG hello world')
	Add cmd line switch to disable console switch
	Move console switch after fifo set up.
